--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('slick-carousel/slick/slick.css');
+@import url('slick-carousel/slick/slick-theme.css');
+
 :root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
